# pdsimage

./: .#setup.py  .dockerignore  .env  .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.html  README.md  README.rst  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
CraterInspec/: .#PDS_Extractor.py  Extract_Array_Binary.py  PDS_Extractor.py  Structure.py
Data/: Data_Crater.csv.REMOVED.git-id  Data_Dome.csv
Image/: BaseOverlay.png.REMOVED.git-id  BaseProfile.png.REMOVED.git-id  Copernicus.png.REMOVED.git-id  CopernicusZoom.png.REMOVED.git-id  Corpernicus.png.REMOVED.git-id  Crater_Copernicus.png.REMOVED.git-id  Crater_Copernicus_Zoom.png.REMOVED.git-id  Crater_Komarov.png.REMOVED.git-id  Crater_Taruntius.png.REMOVED.git-id
Notebook/: CopernicusZoom.png.REMOVED.git-id  Corpernicus.png.REMOVED.git-id  Docs helper.ipynb  Docs helper.ipynb.REMOVED.git-id  Test_library.ipynb  Test_library.ipynb.REMOVED.git-id  Untitled.ipynb  Untitled.ipynb.REMOVED.git-id
Notebook/.ipynb_checkpoints/: Docs helper-checkpoint.ipynb  Docs helper-checkpoint.ipynb.REMOVED.git-id  Test_library-checkpoint.ipynb  Test_library-checkpoint.ipynb.REMOVED.git-id
PDS_FILE/LOLA/: LDEM_16.IMG.REMOVED.git-id  (+2 more)
doc/: Makefile
frontend/: Dockerfile  index.html  package.json  vite.config.ts
pdsimage/: PDS_Extractor.py  Structure.py  __init__.py
pdsimage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  helpers.py  test_api.py  test_binarytable_coords.py  test_catalogs.py  test_globe.py  test_maps_naming.py  test_projections.py
(+45 files in other folders)
