[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdsimage"
version = "2.0.0"
description = "Extract and visualize NASA LRO (LOLA / LROC WAC) lunar surface data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["PDS", "LOLA", "WAC", "Moon", "crater", "dome", "LRO"]
authors = [{ name = "Clement Thorey", email = "clement.thorey@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "cartopy>=0.22",
    "pvl>=1.3",
    "httpx>=0.27",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.scripts]
pdsimage = "pdsimage.cli:main"

[project.urls]
Homepage = "https://github.com/cthorey/pdsimage"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdsimage"]

[tool.hatch.build.targets.wheel.force-include]
"src/pdsimage/data" = "pdsimage/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
